Release Notes version 1 POC

-Wimpy spawn platforms
-deactiveate platforms offscreen 
-object pooling for instatiated platforms
-Camera following
-Jump and move 