@@ -108,7 +108,7 @@ BoxCollider2D:
     adaptiveTiling: 0
   m_AutoTiling: 0
   serializedVersion: 2
-  m_Size: {x: 19.2, y: 10.8}
+  m_Size: {x: 19.01, y: 1}
   m_EdgeRadius: 0
 --- !u!114 &220038938812987123
 MonoBehaviour:
