@@ -146,12 +146,12 @@ Transform:
   m_PrefabAsset: {fileID: 0}
   m_GameObject: {fileID: 119671224}
   m_LocalRotation: {x: 0, y: 0, z: 0, w: 1}
-  m_LocalPosition: {x: 0, y: -2.33, z: -1.5777034}
+  m_LocalPosition: {x: 0, y: -1.99, z: -1.5777034}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children:
   - {fileID: 2137745269}
   m_Father: {fileID: 0}
-  m_RootOrder: 1
+  m_RootOrder: 2
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!114 &119671226
 MonoBehaviour:
@@ -168,35 +168,39 @@ MonoBehaviour:
   thePlatform: {fileID: 220038938812987120, guid: 7cf5511bb7b15e44198c245615bf91ea,
     type: 3}
   generationPoint: {fileID: 718714710}
-  objPlatformPooler:
-  - {fileID: 1434833098}
-  - {fileID: 1712830225}
-  distanceBetween: 2
-  distanceMin: 1
-  distanceMax: 3
-  maxHeightPoint: {fileID: 2137745269}
-  maxHeightChange: 0
+  distanceBetween: 0
+--- !u!4 &134432318 stripped
+Transform:
+  m_CorrespondingSourceObject: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+    type: 3}
+  m_PrefabInstance: {fileID: 1653159188}
+  m_PrefabAsset: {fileID: 0}
 --- !u!1001 &304509252
 PrefabInstance:
   m_ObjectHideFlags: 0
   serializedVersion: 2
   m_Modification:
-    m_TransformParent: {fileID: 0}
+    m_TransformParent: {fileID: 498173193}
     m_Modifications:
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_RootOrder
-      value: 11
+      value: 2
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.x
-      value: -6.21
+      value: -9.242823
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.y
-      value: -1.87
+      value: -7.763507
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_LocalPosition.z
+      value: 115.43741
       objectReference: {fileID: 0}
     - target: {fileID: 1203705856195763969, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
@@ -265,22 +269,27 @@ PrefabInstance:
   m_ObjectHideFlags: 0
   serializedVersion: 2
   m_Modification:
-    m_TransformParent: {fileID: 0}
+    m_TransformParent: {fileID: 498173193}
     m_Modifications:
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_RootOrder
-      value: 13
+      value: 4
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.y
-      value: 1.68
+      value: -4.213507
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.x
-      value: -3.48
+      value: -6.512823
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_LocalPosition.z
+      value: 115.43741
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987120, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
@@ -349,6 +358,41 @@ PrefabInstance:
       objectReference: {fileID: 0}
     m_RemovedComponents: []
   m_SourcePrefab: {fileID: 100100000, guid: 7cf5511bb7b15e44198c245615bf91ea, type: 3}
+--- !u!1 &498173192
+GameObject:
+  m_ObjectHideFlags: 0
+  m_CorrespondingSourceObject: {fileID: 0}
+  m_PrefabInstance: {fileID: 0}
+  m_PrefabAsset: {fileID: 0}
+  serializedVersion: 6
+  m_Component:
+  - component: {fileID: 498173193}
+  m_Layer: 0
+  m_Name: platforms
+  m_TagString: Untagged
+  m_Icon: {fileID: 0}
+  m_NavMeshLayer: 0
+  m_StaticEditorFlags: 0
+  m_IsActive: 1
+--- !u!4 &498173193
+Transform:
+  m_ObjectHideFlags: 0
+  m_CorrespondingSourceObject: {fileID: 0}
+  m_PrefabInstance: {fileID: 0}
+  m_PrefabAsset: {fileID: 0}
+  m_GameObject: {fileID: 498173192}
+  m_LocalRotation: {x: 0, y: 0, z: 0, w: 1}
+  m_LocalPosition: {x: 3.032823, y: 5.893507, z: -115.43741}
+  m_LocalScale: {x: 1, y: 1, z: 1}
+  m_Children:
+  - {fileID: 134432318}
+  - {fileID: 867558955}
+  - {fileID: 1624622007}
+  - {fileID: 1137839224}
+  - {fileID: 551980291}
+  m_Father: {fileID: 0}
+  m_RootOrder: 9
+  m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &519420028
 GameObject:
   m_ObjectHideFlags: 0
@@ -448,6 +492,12 @@ Transform:
   m_Father: {fileID: 0}
   m_RootOrder: 0
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
+--- !u!4 &551980291 stripped
+Transform:
+  m_CorrespondingSourceObject: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+    type: 3}
+  m_PrefabInstance: {fileID: 333031482}
+  m_PrefabAsset: {fileID: 0}
 --- !u!1 &561491471
 GameObject:
   m_ObjectHideFlags: 0
@@ -577,7 +627,7 @@ Transform:
   - {fileID: 1434833099}
   - {fileID: 1712830224}
   m_Father: {fileID: 0}
-  m_RootOrder: 2
+  m_RootOrder: 3
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &646235286
 GameObject:
@@ -608,7 +658,7 @@ Transform:
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children: []
   m_Father: {fileID: 0}
-  m_RootOrder: 5
+  m_RootOrder: 1
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!114 &646235288
 MonoBehaviour:
@@ -647,7 +697,7 @@ Transform:
   m_PrefabAsset: {fileID: 0}
   m_GameObject: {fileID: 718714709}
   m_LocalRotation: {x: 0, y: 0, z: 0, w: 1}
-  m_LocalPosition: {x: 0, y: 5.03, z: 0}
+  m_LocalPosition: {x: 0.01, y: 5.24, z: 0}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children: []
   m_Father: {fileID: 519420032}
@@ -719,6 +769,18 @@ Transform:
   m_Father: {fileID: 0}
   m_RootOrder: 8
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
+--- !u!4 &867558955 stripped
+Transform:
+  m_CorrespondingSourceObject: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+    type: 3}
+  m_PrefabInstance: {fileID: 1876617025}
+  m_PrefabAsset: {fileID: 0}
+--- !u!4 &1137839224 stripped
+Transform:
+  m_CorrespondingSourceObject: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+    type: 3}
+  m_PrefabInstance: {fileID: 1894670467}
+  m_PrefabAsset: {fileID: 0}
 --- !u!1 &1224475914
 GameObject:
   m_ObjectHideFlags: 0
@@ -858,7 +920,7 @@ MonoBehaviour:
   m_EditorClassIdentifier: 
   platformPool: {fileID: 220038938812987120, guid: 7cf5511bb7b15e44198c245615bf91ea,
     type: 3}
-  poolAmount: 5
+  poolAmount: 10
 --- !u!4 &1434833099
 Transform:
   m_ObjectHideFlags: 0
@@ -873,27 +935,58 @@ Transform:
   m_Father: {fileID: 638642807}
   m_RootOrder: 0
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
+--- !u!4 &1624622007 stripped
+Transform:
+  m_CorrespondingSourceObject: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+    type: 3}
+  m_PrefabInstance: {fileID: 304509252}
+  m_PrefabAsset: {fileID: 0}
 --- !u!1001 &1653159188
 PrefabInstance:
   m_ObjectHideFlags: 0
   serializedVersion: 2
   m_Modification:
-    m_TransformParent: {fileID: 0}
+    m_TransformParent: {fileID: 498173193}
     m_Modifications:
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_RootOrder
-      value: 9
+      value: 0
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.y
-      value: -2.31
+      value: -7.9
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.x
-      value: -0.47
+      value: -2.88
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_LocalPosition.z
+      value: 115.43741
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987117, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_Size.x
+      value: 1
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987117, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_Size.y
+      value: 1
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987122, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_SpriteTilingProperty.newSize.x
+      value: 1
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987122, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_SpriteTilingProperty.newSize.y
+      value: 1
       objectReference: {fileID: 0}
     - target: {fileID: 1203705856195763969, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
@@ -1002,28 +1095,33 @@ MonoBehaviour:
   m_EditorClassIdentifier: 
   platformPool: {fileID: 220038938812987120, guid: 7cf5511bb7b15e44198c245615bf91ea,
     type: 3}
-  poolAmount: 3
+  poolAmount: 10
 --- !u!1001 &1876617025
 PrefabInstance:
   m_ObjectHideFlags: 0
   serializedVersion: 2
   m_Modification:
-    m_TransformParent: {fileID: 0}
+    m_TransformParent: {fileID: 498173193}
     m_Modifications:
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_RootOrder
-      value: 10
+      value: 1
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.y
-      value: -0.3
+      value: -6.193507
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.x
-      value: -7.05
+      value: -10.082823
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_LocalPosition.z
+      value: 115.43741
       objectReference: {fileID: 0}
     - target: {fileID: 1203705856195763969, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
@@ -1092,22 +1190,27 @@ PrefabInstance:
   m_ObjectHideFlags: 0
   serializedVersion: 2
   m_Modification:
-    m_TransformParent: {fileID: 0}
+    m_TransformParent: {fileID: 498173193}
     m_Modifications:
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_RootOrder
-      value: 12
+      value: 3
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.y
-      value: 1.05
+      value: -4.843507
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_LocalPosition.x
-      value: -7.61
+      value: -10.642823
+      objectReference: {fileID: 0}
+    - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
+        type: 3}
+      propertyPath: m_LocalPosition.z
+      value: 115.43741
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987120, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
@@ -1251,7 +1354,7 @@ PrefabInstance:
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
       propertyPath: m_RootOrder
-      value: 3
+      value: 4
       objectReference: {fileID: 0}
     - target: {fileID: 220038938812987116, guid: 7cf5511bb7b15e44198c245615bf91ea,
         type: 3}
@@ -1394,7 +1497,7 @@ PrefabInstance:
     - target: {fileID: 7593915667303839256, guid: 370cef79b9d62d74b98921baf95b2c1a,
         type: 3}
       propertyPath: m_RootOrder
-      value: 4
+      value: 5
       objectReference: {fileID: 0}
     - target: {fileID: 7593915667303839256, guid: 370cef79b9d62d74b98921baf95b2c1a,
         type: 3}
